# AgenticNodes

./: .env.example  .gitignore  CLAUDE.md  README.md  config.py  outreach-email-schema.md  pyproject.toml  run.py  state.md
.claude/skills/authoring-skills/: SKILL.md
.claude/skills/model-provider/: SKILL.md
.cursor/rules/: feature-readme-requirement.mdc  gitignore-and-local-config-hygiene.mdc  publish-ready-user-state.mdc
docs/: logging.md  node-development-guide.md  python-script-runner.md  supabase-connections.md  triggers.md
frontend/src/: App.tsx  main.tsx  styles.css
src/graph_agent/: diagnostics.py  schema_validation.py
supabase/: dev_outreach_email_tables.sql  outbound_email_messages_minimal_logger_migration.sql  run_events_schema.sql
tests/: test_agent_filesystem.py  test_apollo_email_lookup.py  test_cloudflare_tunnel.py  test_cron_triggers.py  test_data_driven_graphs.py  test_discord_triggers.py  test_linkedin_profile_fetch.py  test_listener_isolation.py  test_listener_sessions.py  test_mcp_baked_environment_probe.py  test_mcp_discovery.py  test_microsoft_auth.py  test_model_providers.py  test_multi_agent_environment.py  test_outlook_draft_node.py  test_parallel_splitter.py  test_project_files.py  test_python_script_runner.py  test_run_documents.py  test_run_logs.py  test_run_state_reducer.py  test_runtime_event_contract.py  test_runtime_normalizer.py  test_spreadsheet_matrix_decision.py  test_spreadsheet_rows.py  test_structured_payload_builder.py  test_supabase_data.py  test_supabase_run_store.py  test_webhook_triggers.py
(+121 files in other folders)
