[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "graph-agent-framework"
version = "0.1.0"
description = "Graph-based agentic runtime with FastAPI backend and React visualization."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "discord.py",
    "fastapi",
    "httpx",
    "jsonschema",
    "msal",
    "msal-extensions",
    "openpyxl",
    "pypdf",
    "python-multipart",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
graph_agent = ["runtime/*.js"]
